--- a/backend/package.json
+++ b/backend/package.json
@@ -8,21 +8,26 @@
     "dev": "nodemon server.js",
     "seed": "node seeders/seedData.js"
   },
-  "keywords": ["ecommerce", "footwear", "stepout"],
+  "keywords": [
+    "ecommerce",
+    "footwear",
+    "stepout"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
     "express-validator": "^7.0.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^7.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
