--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "autoprefixer": "^10.4.16",
     "react-icons": "^4.12.0",
     "react-hot-toast": "^2.4.1",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "qrcode.react": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
