--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "postcss": "^8.4.31",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "axios": "^1.5.0",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "react-icons": "^4.12.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "qrcode.react": "^1.0.1"
+    "tailwindcss": "^3.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
